<resources>
    <string name="monday">一</string>
    <string name="tuseday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="sunday">日</string>
    <string name="permission">权限(permission)</string>
    <string name="no_permissions">应用需要必要的运行权限</string>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="app_name">薆的例子</string>
    <string name="return_str">返回</string>
    <string name="select_photos">选择照片</string>
    <string name="add">添加</string>
    <string name="del">删除</string>
    <string name="company_name">北京文通科技有限公司</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
</resources>